# ray-gpu-kind-cluster

./: Dockerfile  Makefile  README  README.md  kind-ray-cluster.yaml  pyproject.toml  qwen2-serve.py  ray-cluster-values.yaml  ray-operator-values.yaml  requirements.txt  versions.mk
kind-gpu-cluster/: gpu-test.yaml  hf-cache-test.yaml  image-registry-test.yaml  nvidia-operator.sh  plugin-cm-mixed.yaml  pv-test.yaml  runtime-class.yaml  working.sh
kind-gpu-cluster/hf-cache-pv/: pv-test.yaml  pv.yaml
kind-gpu-cluster/kind/: create-cluster.sh  test.sh
kind-gpu-cluster/kind/scripts/: common.sh  create-kind-cluster.sh  kind-cluster-config-bkp.yaml  kind-cluster-config.yaml  ray-operator.sh
kind-gpu-cluster/kind/scripts/hf-cache-pv/: pv.yaml  pvc.yaml
ray-base-docker/: Dockerfile
ray-cluster/: Dockerfile  hacks.sh  ray-cluster-values.yaml  ray-cluster.sh  ray-port-forward.sh  ray-pvc.yaml  ray-submit.sh  ray_install.sh  ray_run.sh
ray-cluster/ray-jobs/: check_resources.py  qwen2_openai.py  qwen2_run.py  ray_basics.py  serve_delete.py
